[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wecom-docs-mcp-server"
version = "1.0.0"
description = "MCP server for WeCom (Enterprise WeChat) document operations — create, read, edit Docs and Smartsheets"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["mcp", "wecom", "wechat-work", "enterprise-wechat", "documents", "smartsheet", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.scripts]
wecom-docs-mcp-server = "wecom_docs_mcp_server:main"

[project.urls]
Homepage = "https://github.com/Beltran12138/wecom-docs-mcp-server"
Repository = "https://github.com/Beltran12138/wecom-docs-mcp-server"
Issues = "https://github.com/Beltran12138/wecom-docs-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
